# Orderbook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev_notes.txt  order.hpp  orderbook.cpp  orderbook.hpp  test.cpp  testing_plan.md
benchmark_results/results/: compaction_ratios_run1  compaction_ratios_run2  compaction_ratios_run3
benchmark_results/scripts/: analyze_compaction_study.py  compaction_ratios.sh
benchmarks/: exchange_bench.cpp  order_generator.cpp  order_generator.hpp  orderbook_bench.cpp
include/: exchange.hpp  order.hpp  orderbook.hpp
src/: exchange.cpp  order.cpp  orderbook.cpp
tests/: exchange_test.cpp  test.cpp
